--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -150,7 +150,9 @@
                     </div>
                     <div class="col-12 col-md-8 py-2">
                         <a class="aw btn btn-primary border-bk hover-shadow" href="{{  order.stripe_receipt }}"
-                            target="_blank"><i class="fad fa-file-invoice-dollar fa-lg px-1"></i><span class="aw">View
+                            target="_blank"><img
+                                src="https://img.icons8.com/clouds/50/000000/folder-bills.png" /></i><span
+                                class="aw">View
                                 Receipt</span>
 
                         </a>
