--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -160,20 +160,20 @@
 
                                 {% if product.in_stock == True %}
                                 {% if product.image %}
-                                <a class="  mx-auto" href="{{ product.get_absolute_url }}">
+                                <a class="ripple-surface mx-auto" href="{{ product.get_absolute_url }}">
                                     <img class="mx-auto mt-1 card-img-top shop-card-top-img img-fluid"
                                         src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
 
                                 {% else %}
-                                <a class="  mx-auto" href="{{ product.get_absolute_url }}">
+                                <a class="ripple-surface mx-auto" href="{{ product.get_absolute_url }}">
                                     <img class="mx-auto mt-1 card-img-top shop-card-top-img img-fluid"
                                         src="{{ MEDIA_URL }}no-image.png" alt=" {{ product.name }}">
                                 </a>
                                 {% endif %}
                                 {% else %}
                                 <a class="mx-auto" href="">
-                                    <img class="  mx-auto card-img-top shop-card-top-img img-fluid"
+                                    <img class="  ripple-surface  mx-auto card-img-top shop-card-top-img img-fluid"
                                         src="{% static 'images/outofstock.png' %}" alt="{{ product.name }}">
                                 </a>
                                 <div class="card-body pb-0">
@@ -210,7 +210,8 @@
                                             </p>
                                             {% endif %}
                                             <p class=""><i
-                                                    class="fas text-ylw fa-star mr-2"></i>{{ product.rating_ave }}</p>
+                                                    class="fas text-ylw fa-star mr-2"></i>{{ product.rating_ave|floatformat:1  }}
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
