--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -28,7 +28,8 @@
                     <i class="fad fa-user-alt"></i>
 
                 </span>
-                <a class="aw text-wht" href="{% url 'account_login' %}" title="User Login"> &nbsp;Login</a>
+                <a class="ripple-surface aw text-wht" href="{% url 'account_login' %}" title="User Login">
+                    &nbsp;Login</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <a class="aw text-wht" href="{% url 'account_signup' %}" title="Registration Form"> &nbsp;Sign up</a>
 
@@ -36,6 +37,7 @@
 
 
                 <a href="{% url 'cart_view' %}" class="site-cart ">
+
                     <span><i class="fad fa-shopping-cart text-wht " title="Go to CheckOut"></i></span>
 
                     <span title="Go to CheckOut"
