--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -115,12 +115,12 @@
 
                     {% if request.user.is_authenticated  %}
                     <div class="text-center">
-                        <a class=" w-50 hero-btn btn btn-success btn-lg aw text-wht hover-shadow border border-bk bs-2"
+                        <a class="ripple-surface w-50 hero-btn btn btn-success btn-lg aw text-wht hover-shadow border border-bk bs-2"
                             href="{% url 'memberships:select-membership' %}" role="button">Join Up</a>
                     </div>
                     {% else %}
                     <div class="text-center">
-                        <a class=" w-50 hero-btn btn btn-success btn-lg aw text-wht border border-secondary bs-2"
+                        <a class="ripple-surface w-50 hero-btn btn btn-success btn-lg aw text-wht border border-secondary bs-2"
                             href="{% url 'account_login' %}" role="button">Join Up</a>
                     </div>
                     {% endif %}
@@ -138,7 +138,7 @@
         {% for items in display_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
-                <a class="back-up-img mx-auto" href="{% url 'products:product_detail' items.id %}">
+                <a class="ripple-surface back-up-img mx-auto" href="{% url 'products:product_detail' items.id %}">
                     <img class="mx-auto card-img-top shop-card-top-img img-fluid" src="{{ items.image.url }}"
                         alt="{{ items.name }}">
                 </a>
