--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -6,8 +6,8 @@
             <img class="ml-3" src="{% static 'images/logo.png' %}" alt="">
         </div>
         <div class="col-md-6 col-sm-9 col-12 pt-3">
-            <p class="aw text-wht text-center">Be the First to recieve exciting news, Features, and special
-                offers from Focus Fitness!
+            <p class="text-wht text-center">Be the First to recieve exciting news, Features, and special
+                offers from <span class="aw">Focus Fitness!</span>
             </p>
 
             <div class="form-row align-items-center">
@@ -17,7 +17,8 @@
                         <div class="input-group  mb-2">
                             {{ news_form }}
                             <div class="input-group-prepend">
-                                <button type="submit" class="aw btn btn-outline-light btn-sm">Submit</button>
+                                <button type="submit"
+                                    class="ripple-surface aw btn btn-outline-light btn-sm">Submit</button>
                             </div>
                         </div>
                     </form>
@@ -55,15 +56,35 @@
         <div class="col-sm-3 col-8 mx-auto">
             <div class="col-auto ">
                 <div class="row d-flex justify-content-center">
-                    <a class=" col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2" href="#"
-                        role="button">Join Up</a>
-                    <a class="col-12 btn btn-primary btn-sm aw text-wht border border-white m-2"
+                    {% if current_membership == False %}
+                    <a class="ripple-surface  col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2"
+                        href="{% url 'account_signup' %}" role="button">Join Up</a>
+                    {% endif %}
+
+                    {% if current_membership == "Free" %}
+                    <a class="ripple-surface col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2"
+                        href="{% url 'memberships:select-membership' %}" role="button">Subcribe</a>
+                    {% endif %}
+
+                    {% if current_membership == "Professional" %}
+                    <a class="ripple-surface  col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2"
+                        href="{% url 'programs:list' %}" role="button">Programs</a>
+                    {% endif %}
+
+                    <a class="ripple-surface col-12 btn btn-primary btn-sm aw text-wht border border-white m-2"
                         href="{% url 'products:products' %}" role="button">Shop
                     </a>
-                    <a class="col-12 btn btn-warning btn-sm aw text-wht border border-white m-2" href="#"
-                        role="button">Blog</a>
-                    <a class="col-12 btn btn-success btn-sm aw text-wht border border-white m-2" href="#"
-                        role="button">Login</a>
+                    <a class="col-12 btn btn-warning btn-sm aw text-wht border border-white m-2"
+                        href="{% url 'blog:list' %}" role="button">Blog</a>
+
+
+                    {% if request.user.is_authenticated %}
+                    <a class="ripple-surface col-12 btn btn-success btn-sm aw text-wht border border-white m-2"
+                        href="{% url 'account_logout' %}" role="button">Logout</a>
+                    {% else %}
+                    <a class="ripple-surface col-12 btn btn-success btn-sm aw text-wht border border-white m-2"
+                        href="{% url 'account_login' %}" role="button">Login</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -75,12 +96,15 @@
     </div>
     <div class="row">
         <div class="col-12 feet-bg">
-            <h6 class="aw text-center my-3">Web Design by Clinton Davis</h6>
+            <a class="feet-bg" href="https://github.com/Clinton-Davis" target="_blank">
+                <h6 class="aw text-center my-3">Web Design by Clinton Davis</h6>
+            </a>
         </div>
     </div>
     <div class="row">
         <div class="col-12 feet-bg">
-            <a class="text-center font-small" href="https://icons8.com/icon/17949/google">Social icons by Icons8</a>
+            <a class="font-small" href="https://icons8.com/icon/17949/google" target="_blank">Social icons
+                by Icons8</a>
         </div>
     </div>
 </div>
