--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -21,7 +21,8 @@
                 <form method="POST" class="text-wht p4 mb-4 aw">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input type="submit" class="aw text-wht btn btn-warning w-50" value="Submit message" />
+                    <input type="submit" class="ripple-surface aw text-wht btn btn-warning w-50"
+                        value="Submit message" />
                 </form>
             </div>
         </div>
