--- a/memberships/templates/memberships/membership_payment.html
+++ b/memberships/templates/memberships/membership_payment.html
@@ -40,7 +40,8 @@
 
                     <input type="hidden" id="nonce" name="payment_method_nonce" />
                     <div class="row justify-content-center">
-                        <button type="submit" class="sub aw btn btn-success"><i class="fad fa-lock-alt"></i>&nbsp;Submit
+                        <button type="submit" class="ripple-surface sub aw btn btn-success"><img class="ml-2"
+                                src="https://img.icons8.com/dusk/32/000000/password-check.png" />&nbsp;Submit
                             Payment</button>
                     </div>
                 </fieldset>
