--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -32,7 +32,7 @@
                     <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}"
                         id="slide{{ forloop.counter }} ">
 
-                        <a href="{{ blog.get_absolute_url }}">
+                        <a class="" href="{{ blog.get_absolute_url }}">
                             <img class="d-block carosel-img mx-auto" src="{{ blog.thumbnail.url }}" alt="First slide">
                             <div class="row justify-content-center">
                                 <h5 class="text-center text-wht">{{ blog.title|title }}</h5>
@@ -138,7 +138,7 @@
                         <form method="GET" action="{% url 'blog:search' %}" class="form-inline my-2 my-lg-0">
                             <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
                                 aria-label="Search">
-                            <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
+                            <button class="ripple-surface aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
                         </form>
                     </div>
                 </div>
