--- a/memberships/templates/memberships/membership_list.html
+++ b/memberships/templates/memberships/membership_list.html
@@ -50,7 +50,7 @@
 
                     {% if object.membership_type != current_membership %}
                     <div class="row justify-content-center">
-                        <button class=" aw w-75 text-wht btn btn-success" type="submit">Select</button>
+                        <button class="ripple-surface  aw w-75 text-wht btn btn-success" type="submit">Select</button>
                     </div>
 
                     {% else %}
