--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -19,7 +19,8 @@
                     class="password_change">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="aw text-wht" type="submit" name="action">{% trans "Change Password" %}</button>
+                    <button class="ripple-surface aw text-wht" type="submit"
+                        name="action">{% trans "Change Password" %}</button>
                 </form>
 
             </div>
