--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -37,7 +37,7 @@
                 <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset aw text-wht">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input class="aw text-wht btn btn-warning w-100" type="submit"
+                    <input class="ripple-surface aw text-wht btn btn-warning w-100" type="submit"
                         value="{% trans 'Reset My Password' %}" />
                 </form>
 
