--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -28,7 +28,7 @@
                     <i class="fad fa-user-alt"></i>
 
                 </span>
-                <a class="ripple-surface aw text-wht" href="{% url 'account_login' %}" title="User Login">
+                <a class="aw text-wht" href="{% url 'account_login' %}" title="User Login">
                     &nbsp;Login</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <a class="aw text-wht" href="{% url 'account_signup' %}" title="Registration Form"> &nbsp;Sign up</a>
