--- a/templates/base_partials/_up.html
+++ b/templates/base_partials/_up.html
@@ -1,5 +1,6 @@
-<div class="  btt-button shadow-sm rounded-15 border border-black bg-dark-a">
-    <a class="btt-link d-flex h-100 bg-black rounded-15">
-        <i class="fad fa-hand-point-up fa-lg text-wht mx-auto my-auto"></i>
+<div class="btt-button shadow-sm ">
+    <a class="btt-link d-flex bg-black rounded">
+
+        <img class="mx-auto my-auto" src="https://img.icons8.com/emoji/40/000000/top-arrow-emoj.png" />
     </a>
 </div>
