--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -74,7 +74,7 @@
                     <a class="ripple-surface col-12 btn btn-primary btn-sm aw text-wht border border-white m-2"
                         href="{% url 'products:products' %}" role="button">Shop
                     </a>
-                    <a class="col-12 btn btn-warning btn-sm aw text-wht border border-white m-2"
+                    <a class="ripple-surface col-12 btn btn-warning btn-sm aw text-wht border border-white m-2"
                         href="{% url 'blog:list' %}" role="button">Blog</a>
 
 
@@ -103,7 +103,7 @@
     </div>
     <div class="row">
         <div class="col-12 feet-bg">
-            <a class="font-small" href="https://icons8.com/icon/17949/google" target="_blank">Social icons
+            <a class=" ml-2 font-small" href="https://icons8.com/icon/17949/google" target="_blank">Icons
                 by Icons8</a>
         </div>
     </div>
