--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -12,7 +12,7 @@
 
                 <h1 class="aw text-wht text-center">{% trans "Change Password" %}</h1>
                 <p class="aw text-wht text-center">{% trans 'Your password is now changed.' %}</p>
-                <a class="aw w-100 btn btn-success" href="{% url 'home' %}">Home</a>
+                <a class="ripple-surface aw w-100 btn btn-success btn-outline-light" href="{% url 'home' %}">Home</a>
 
             </div>
         </div>
