--- a/templates/account/snippets/already_logged_in.html
+++ b/templates/account/snippets/already_logged_in.html
@@ -2,4 +2,5 @@
 {% load account %}
 
 {% user_display user as user_display %}
-<p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as {{ user_display }}.{% endblocktrans %}</p>
+<p class="text-wht"><strong class="text-ylw">{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as
+    {{ user_display }}.{% endblocktrans %}</p>
