--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 <h1 id="head">
     <img src="{% static 'images/logo.png' %}" class="brand_img" alt="Focus Fitness" height="50" width="100"> Focus Admin
 </h1>
-<link rel="stylesheet" href="{% static 'CSS\admin.css' %}">
+<link rel="stylesheet" href="{% static 'css/admin.css' %}">
 {% endblock %}
 
 {% block extrastyling %}
