--- a/static/css/style.css
+++ b/static/css/style.css
@@ -752,7 +752,7 @@ nav {
 
 .reg-pic {
   background: url(/static/images/javier-santos-guzman.jpg) no-repeat fixed;
-  height: 100vh;
+  height: fit-content;
   background-position: 50% 30%;
   /* background-color: #fff; */
   -webkit-background-size: cover;
