added float to index

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -156,7 +156,7 @@
                                 </span>{{ items.price }}</p>
 
                             <i class="fas text-ylw fa-lg fa-star mr-1"></i>
-                            <small class="">{{ items.rating_ave}}</small>
+                            <small class="">{{ items.rating_ave|floatformat:1 }}</small>
 
                         </div>
                     </div>
