--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -21,3 +21,39 @@ h1 {
 #content-main {
     font-family: "Montserrat", sans-serif;
 }
+
+div.breadcrumbs {
+    background: rgba(0, 0, 255, 0.61);
+    padding: 10px 40px;
+    border: none;
+    font-size: 14px;
+    color: #c4dce8;
+    text-align: left;
+}
+
+a:link,
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+.module h2,
+.module caption,
+.inline-group h2 {
+    font-size: 13px;
+    text-align: left;
+    background: rgba(0, 0, 255, 0.61);
+    color: #fff;
+}
+
+.app-blog {
+    background-color: rgba(255, 0, 0, 0.267);
+}
+
+.app-products {
+    background-color: rgba(30, 255, 0, 0.267);
+}
+
+.app-memberships {
+    background-color: rgba(255, 238, 0, 0.493);
+}
