added colurs to the differance zones

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -57,3 +57,7 @@ a:visited {
 .app-memberships {
     background-color: rgba(255, 238, 0, 0.493);
 }
+
+.app-programs {
+    background-color: rgba(0, 0, 255, 0.205);
+}
