added terms and privacy and copy right to page

--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -52,6 +52,25 @@
                     </small>
                 </p>
             </div>
+            <div class="text-center">
+                <div class="col-12 d-inline mt-2">
+                    <a href="{% url 'terms' %}" target="_blank" "><small class=" text-off-wht mx-auto text-center">Terms
+                        of
+                        Service</small>
+
+                    </a>
+                </div>
+                <div class="col-12 d-inline mt-2">
+                    <a href="{% url 'privacy' %}" target="_blank" "><small class=" text-off-wht mx-auto
+                        text-center">Privacy</small>
+                    </a>
+                </div>
+                <div class="col-12 d-inline mt-2">
+                    <a target="_blank" "><small class=" text-off-wht mx-auto text-center">CopyRight © 2020</small>
+                    </a>
+                </div>
+            </div>
+
         </div>
         <div class="col-sm-3 col-8 mx-auto">
             <div class="col-auto ">
@@ -91,9 +110,8 @@
     </div>
     <div class="text-center d-block d-md-none">
         <img src="{% static 'images/logo.png' %}" alt="">
-        <h4 class="aw text-wht text-center mb-2">CopyRight ©
-        </h4>
     </div>
+
     <div class="row">
         <div class="col-12 feet-bg">
             <a class="feet-bg" href="https://github.com/Clinton-Davis" target="_blank">
